# info3-mn

./: .gitignore  CMakeLists.txt  README.md
TP1/: makefile  p1  p2  perf_poly.c  poly.c  poly.h  poly_creux.c  poly_creux.h  test_poly.c  test_poly_creux.c
TP2/: CMakeLists.txt
TP2/examples/: Makefile  flop.c  flop.h  test_asum  test_asum.c  test_axpy  test_axpy.c  test_complexe.c  test_complexe2.c  test_complexe3.c  test_complexe4.c  test_copy.c  test_dot  test_dot.c  test_dot_dyn  test_gemm.c  test_gemv.c  test_iamax  test_iamax.c  test_iamin  test_iamin.c  test_nrm2  test_nrm2.c  test_swap  test_swap.c  utils.c  utils.h
TP2/examples/diff_performance/: axpy.txt  copy.txt  dot.txt  gemm.txt  gemv.txt
TP2/include/: complexe.h  complexe2.h  mnblas.h
TP2/src/: Makefile  asum.c  axpy.c  complexe.c  copy.c  dot.c  gemm.c  gemm_stub.c  gemv.c  iamax.c  iamin.c  nrm2.c  swap.c
